# xclearp

./: .gitignore  README.md  README_EN.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  vite.config.ts
.agents/: AGENTS.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  nightly.yml  release.yml
scripts/: prebuild-check.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app.toml
src-tauri/rules/: browser_cache.json  build_artifacts.json  crash_dumps.json  dev_tools.json  system_cache.json  system_temp.json  trash.json
src-tauri/src/: config.rs  main.rs
src-tauri/src/commands/: clean.rs  disk.rs  mod.rs  orphan.rs  rules.rs  scan.rs  startup.rs  uninstall.rs
src-tauri/src/core/: cleaner.rs  dedup.rs  engine.rs  event_bus.rs  events.rs  mod.rs  orphan.rs  rules.rs  scanner.rs  startup.rs  whitelist.rs
src-tauri/src/core/uninstall/: app_scanner.rs  engine.rs  mod.rs
src-tauri/src/platform/: common.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/components/: CleanProgress.tsx  DiskAnalysis.tsx  Icons.tsx  OrphanView.tsx  RuleEditor.tsx  ScanView.tsx  SettingsView.tsx  Sidebar.tsx  StartupView.tsx  Toast.tsx  Tooltip.tsx  UninstallView.tsx  WhitelistManager.tsx
src/hooks/: useCleanStream.ts  useDiskAnalysis.ts  useGroups.ts  useScanStream.ts  useUninstallStream.ts  useUpdater.ts
src/lib/: i18n.tsx  ipc.ts  ndjson.ts
(+11 files in other folders)
