[package]
name = "xclearp"
version = "0.1.0"
description = "A cross-platform system cleaner"
authors = ["xclearp"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
glob = "0.3"
walkdir = "2"
dirs = "5"
ignore = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
plist = "1"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = ["NSURL", "NSString", "NSDictionary", "NSArray", "NSError"] }

